paginas settings completadas

--- a/frontend/src/components/order/Order.scss
+++ b/frontend/src/components/order/Order.scss
@@ -20,6 +20,10 @@
   .text-name-student {
     text-align: center;
     color: var(--text-1);
+
+    span{
+      margin: 0 .1em;
+    }
   }
 
   .card-order-content {
