--- a/frontend/src/components/adminComponents/workerContainer/WorkerContainer.scss
+++ b/frontend/src/components/adminComponents/workerContainer/WorkerContainer.scss
@@ -2,8 +2,7 @@
 
 .section-container-worker-cards {
     width: 100%;
-    background-color: var(--background-1);
+    // background-color: var(--background-3);
     @include flex-items(column);
     gap: 1em;
-    padding: 1em 0;
 }
