--- a/frontend/src/pages/settings/studentSettings/StudentSettings.scss
+++ b/frontend/src/pages/settings/studentSettings/StudentSettings.scss
@@ -11,7 +11,7 @@
 main#student-setttings {
   @include flex-items(column);
   color: var(--text-2);
-  margin-top: 60px;
+  // margin-top: 60px;
   display: flex;
   gap: 20px;
   width: 90%;
