--- a/frontend/src/pages/Menu/MenuPage.scss
+++ b/frontend/src/pages/Menu/MenuPage.scss
@@ -2,7 +2,10 @@
 
 #menu-page-container{
     background-color: var(--background-2);
+    width: 100%;
+    min-height: 100vh;
     display: grid;
-    grid-template-rows: auto 1fr auto;
-    position: relative;
+    place-items: center;
+    grid-template-rows: auto 1fr 70px;
+    
 }
