--- a/frontend/src/pages/settings/workerSettings/WorkerSettings.scss
+++ b/frontend/src/pages/settings/workerSettings/WorkerSettings.scss
@@ -4,12 +4,25 @@
   background-color: var(--background-1);
   min-height: 100vh;
   @include flex-items(column);
-  
-  img#coffeShop-image {
-    margin-top: 1.5vh;
-    height: 25vh;
-    border-radius: 15px;
-    box-shadow: 0 0 25px 2px black;
+
+  .container-img-worker-settings {
+    width: 95%;
+    @include flex-items(column);
+    gap: 20px;
+
+    h2 {
+      color: var(--text-1);
+      text-align: center;
+      font-size: $font-subtitle-1;
+    }
+
+    .coffeShop-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 15px;
+      // box-shadow: 0 0 25px 2px black;
+    }
   }
 
   main#worker-setttings {
@@ -21,19 +34,19 @@
     width: 90%;
   }
 
-  #settings-container{
+  #settings-container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 10px; 
+    gap: 10px;
   }
 
   section#section-log-out {
-   padding-bottom: 100px;
-   width: 100%;
-   @include flex-items;
 
-    .container-logout{
+    width: 100%;
+    @include flex-items;
+
+    .container-logout {
       @include flex-items;
       color: var(--text-2);
       gap: 10px;
@@ -49,7 +62,6 @@
     svg {
       margin: 0 auto;
       font-size: 2em;
-      margin-bottom: 5px;
     }
 
     p {
