--- a/frontend/src/pages/menuOwner/MenuOwner.scss
+++ b/frontend/src/pages/menuOwner/MenuOwner.scss
@@ -16,7 +16,7 @@
         align-items: start;
         justify-content: center;
         flex-direction: column;
-
+s
         .container-title-category-owner {
             width: 100%;
 
