--- a/frontend/src/components/order/Order.scss
+++ b/frontend/src/components/order/Order.scss
@@ -54,7 +54,7 @@
     width: 100%;
     @include flex-items;
     gap: 10px;
-    height: 22px;
+    height: 28px;
 
     .btn-card-order {
       flex: 1;
@@ -65,6 +65,7 @@
       color: var(--text-1);
       font-size: $font-size-small;
       font-weight: bold;
+      @include flex-items;
     }
 
     .btn-card-order:active {
