--- a/frontend/src/pages/orders/Orders.scss
+++ b/frontend/src/pages/orders/Orders.scss
@@ -14,5 +14,13 @@
     width: 100%;
     height: 100%;
     gap: 20px;
+
+    .cup-img-logo{
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 100px;
+      color: var(--background-3);
+    }
   }
 }
