--- a/frontend/src/pages/settings/studentSettings/studentUpdate/StudentUpdate.scss
+++ b/frontend/src/pages/settings/studentSettings/studentUpdate/StudentUpdate.scss
@@ -100,6 +100,9 @@
                     border: 1px solid var(--text-1);
                     font-size: $font-size-medium-small;
                 }
+                button:active{
+                    transform: scale(.8);
+                }
 
             }
         }
