--- a/frontend/src/components/menuComponents/categoryCard/CategoryCard.scss
+++ b/frontend/src/components/menuComponents/categoryCard/CategoryCard.scss
@@ -11,7 +11,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-    font-size: 40px;
+    // font-size: 40px;
   }
   
   .div-darken-category-card{
