--- a/frontend/src/pages/product/Product.scss
+++ b/frontend/src/pages/product/Product.scss
@@ -79,7 +79,7 @@
                     font-size: $font-subtitle-1;
                     font-weight: bold;
                     padding: 0 20px;
-                    border-radius: 0 20px;
+                    border-radius: 0 0 0 20px;
                     // width: 100px;
                 }
 
@@ -134,15 +134,16 @@
 
                 // Price container
                 .container-price-order-product {
-
+                    
                     p {
                         @include flex-items;
                         width: 100%;
                         height: 60%;
                         border-radius: 10px;
-                        background-color: var(--reverse-neutral);
+                        background-color: var(--background-3);
                         font-size: $font-body-large;
                         font-weight: bold;
+                        color: var(--text-1);
                     }
                 }
 
@@ -170,8 +171,8 @@
                         font-size: $font-subtitle-1;
                         flex: 1;
                         border: 0;
-                        background-color: var(--reverse-neutral);
-                        color: var(--background-1);
+                        background-color: var(--background-3);
+                        color: var(--text-1);
                         font-weight: 900;
                     }
 
