--- a/frontend/src/components/menuComponents/categoryCard/CategoryCard.scss
+++ b/frontend/src/components/menuComponents/categoryCard/CategoryCard.scss
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: $neutral-default-black;
+    background-color: var(--background-3);
     z-index: 1;
     opacity: .7;
   }
