--- a/frontend/src/components/adminComponents/courseContainer/courseCard/CourseCard.scss
+++ b/frontend/src/components/adminComponents/courseContainer/courseCard/CourseCard.scss
@@ -7,9 +7,11 @@
     display: flex;
     justify-content: space-between;
 
-    .container-name-course h2{
+    .container-name-course h2 {
         display: flex;
-        color: var(--text-2)
+        color: var(--text-2);
+        font-weight: 600;
+
     }
 
     .container-control-course {
@@ -19,6 +21,7 @@
             font-size: 20px;
             border: 0;
             color: var(--text-3);
+            cursor: pointer;
         }
 
         .btn-trash:active {
