--- a/frontend/src/components/adminComponents/workerContainer/workerCard/WorkerCard.scss
+++ b/frontend/src/components/adminComponents/workerContainer/workerCard/WorkerCard.scss
@@ -18,6 +18,10 @@
             border-radius: 50%;
             object-fit: cover;
         }
+        .container-name h2{
+            color: var(--text-2);
+            font-weight: 500;
+        }
     }
 
     .container-control-worker {
@@ -32,6 +36,7 @@
             color: var(--text-3);
             flex: 1;
             font-size: 28px;
+            cursor: pointer;
         }
 
         .btn-edit:active,
