--- a/frontend/src/pages/admin/Admin.scss
+++ b/frontend/src/pages/admin/Admin.scss
@@ -13,14 +13,15 @@ main#admin-home {
   details {
     width: 100vw;
     background-color: var(--background-1);
-    cursor: pointer;
+    // cursor: pointer;
+    color: var(--text-1);
   }
 }
 
 section#section-log-out {
   cursor: pointer;
-  margin-top: 20px;
   width: 100%;
+  margin: 30px 0;
   @include flex-items;
   // background-color: $third-color;
 
