--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -36,6 +36,19 @@ $font-body-small: 14pt;
 $font-small: 12pt;
 $font-tiny: 10pt;
 
+// Tamaños predeterminado tablet
+$font-t-H1: 80pt;
+$font-t-H2: 22pt;
+
+$font-t-subtitle-1: 25pt;
+$font-t-subtitle-2: 18pt;
+
+$font-t-body-large: 16pt;
+$font-t-body-small: 20pt;
+
+$font-t-small: 12pt;
+$font-t-tiny: 10pt;
+
 // Colores
 $primary-color: #EB5E28;
 $secondary-color: #2B2927;
