--- a/frontend/src/components/searchBar/SearchBar.scss
+++ b/frontend/src/components/searchBar/SearchBar.scss
@@ -41,3 +41,11 @@ nav#header-container {
 		outline: none;
 	}
 }
+
+ @media (min-width: 800px) {
+	nav#header-container{
+		div h2{
+			font-size: $font-size-title;
+		}
+	}
+ }
