--- a/frontend/src/components/productCard/ProductCard.scss
+++ b/frontend/src/components/productCard/ProductCard.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   background-color: var(--background-3);
   width: 100%;
+  max-width: 300px;
   height: 100%;
   display: flex;
   flex-direction: column;
