--- a/frontend/src/pages/ProductsList/ProductsList.scss
+++ b/frontend/src/pages/ProductsList/ProductsList.scss
@@ -47,10 +47,6 @@
             row-gap: 20px;
             column-gap: 10px;
 
-            & div{
-                // flex: 1 0 auto;
-                // height: 180px;
-            }
         }
     }
 }
@@ -59,29 +55,20 @@
 @media (min-width: 800px) {
     #page-list-products .content-page-list-products {
         .container-list-products {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(auto, 200px);
-            place-items: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
 
             & div{
+                width: 300px;
+                height: 250px;
                 // flex: 1 0 auto;
                 // height: 180px;
                 .container-img-product-card{
-                    height: 75%;
+                    height: 80%;
                 }
             }
-        }
-
-    }
-}
-
-@media (min-width: 1080px) {
-    #page-list-products .content-page-list-products {
-        .container-list-products {
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-            grid-template-rows: repeat(auto, minmax(100px, 200px));
-            justify-items: start;
         }
     }
 }
