Fix users views and updated error view

--- a/SSR/views/admins.views/home.admin.ejs
+++ b/SSR/views/admins.views/home.admin.ejs
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-   <h1>Bienvenido</h1>
+   <h1>Bienvenido </h1>
+
+   <form action="/api/logout" method="POST">
+    <button type="submit">Logout</button>
+  </form>
 </body>
 </html>
