--- a/SSR/views/admins.views/crudAdmin/listAdmins.ejs
+++ b/SSR/views/admins.views/crudAdmin/listAdmins.ejs
@@ -15,6 +15,9 @@
             </a>
         </li>
             <% } %>
+            <a href="/api/admin/create">
+                Crear Admin
+            </a>
         </ul>
         <script src="/js/admins/crudAdminJs/deleteAdmin.js" defer></script>
     </body>
