--- a/SSR/views/admins.views/crudAdmin/editAdmin.ejs
+++ b/SSR/views/admins.views/crudAdmin/editAdmin.ejs
@@ -8,10 +8,13 @@
 <body>
     <h1>Editar Admin</h1>
     <form id="edit-admin-form" data-id="<%= admin.id %>">
-        <label for="username">Nombre de usuario:</label>
+        <label for="username">Nombre</label>
         <input type="text" id="username" name="username" value="<%= admin.username %>" required>
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="password" value="<%= admin.password %>" required>
         <button type="submit">Guardar cambios</button>
     </form>
+    <a href="/api/admin">Volver</a>
     <script src="/js/admins/crudAdminJs/editAdmin.js" defer></script>
 </body>
 </html>
