--- a/SSR/views/student.views/update.student.ejs
+++ b/SSR/views/student.views/update.student.ejs
@@ -6,11 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  <form id="update-form">
-    <input name="username" type="text">
-    <input name="age" type="text">
-    <input name="phone" type="text">
-    <button type="submit"></button>
+  <form id="update-student-form" data-id="<%= student.id %>">
+  <h2><%= student.id %></h2>
+    <input name="username" type="text" value="nano">
+    <input name="password" type="password" value="1234">
+    <input name="age" type="text" value="10">
+    <input name="phone" type="text" value="784546486">
+    <button type="submit">Actualizar</button>
   </form>
   <script src="/js/students/students.scripts.js"></script>
 </body>
