Fix Merging mistakes

--- a/SSR/views/admins.views/home.admin.ejs
+++ b/SSR/views/admins.views/home.admin.ejs
@@ -8,6 +8,12 @@
 <body>
    <h1>Bienvenido </h1>
 
+   <% include('../admins.views/crudAdmin/listAdmins.ejs') %>
+
+   <% include('../student.views/test.student.ejs') %>
+
+   <% include('../worker.views/listWorker.worker.ejs') %>
+
    <form action="/api/logout" method="POST">
     <button type="submit">Logout</button>
   </form>
