--- a/SSR/views/student.views/create.student.ejs
+++ b/SSR/views/student.views/create.student.ejs
@@ -6,11 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <H2>CREAME</H2>
+  <H2>Crear Estudiante</H2>
   <form action="/api/view" method="POST">
-    <input name="username" type="text">
-    <input name="password" type="text">
-    <button id="create-button" type="submit">Mandar</button>
+    <input name="username" placeholder="username" type="text">
+    <input name="password" placeholder="password" type="text">
+    <button id="create-button" type="submit">Crear</button>
   </form>
   <script src="/js/students/students.scripts.js"></script>
 </body>
