--- a/SSR/views/admins.views/crudAdmin/listAdmins.ejs
+++ b/SSR/views/admins.views/crudAdmin/listAdmins.ejs
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admins</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Listado de admins</h1>
     <ul>
-        <% for (let a of admins) { %>
-        <li><%= a.username  %>
-            <button class="delete-button" data-id="<%= a.id %>">Eliminar</button>
-            <a href="/api/admin/edit/<%= a.id %>">
-                <button class="edit-button">Editar</button>
-            </a>
-        </li>
-            <% } %>
-            <a href="/api/admin/create">
-                Crear Admin
-            </a>
-        </ul>
-        <script src="/js/admins/crudAdminJs/deleteAdmin.js" defer></script>
-    </body>
-</html> 
+      <% for (let a of admins) { %>
+      <li>
+        <%= a.username %>
+        <button class="delete-button" data-id="<%= a.id %>">Eliminar</button>
+        <a href="/api/admin/edit/<%= a.id %>">
+          <button class="edit-button">Editar</button>
+        </a>
+      </li>
+      <% } %>
+    </ul>
+
+    <a href="/api/admin/create"> Crear Admin </a>
+    <script src="/js/admins/crudAdminJs/deleteAdmin.js" defer></script>
+  </body>
+</html>
