--- a/SSR/views/student.views/test.student.ejs
+++ b/SSR/views/student.views/test.student.ejs
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+  <body>
+    <h1>Listado de estudiantes</h1>
+    <ul>
+      <% for (let student of students) { %>
+      <li>
+        Nombre : <%= student.username %>
+        <button class="delete-button" data-id="<%= student.id %>">
+          Eliminar
+        </button>
+        <a href="/api/view/edit/<%= student.id %>">
+          <button class="edit-button">Editar</button>
+        </a>
+      </li>
+      <% } %>
+    </ul>
 
-<body>
-  <% for (let student of students) { %>
-    <h2>Nombre : <%= student.username %></h2>
-    <button class="delete-button" data-id="<%= student.id %>">Eliminar</button>
-    <a href="/api/view/edit/<%= student.id %>">
-      <button class="edit-button">Editar</button>
-    </a>
-  <% } %>
-  <script src="/js/students/students.scripts.js"></script>
-</body>
+    <a href="/api/view/create"> Crear Estudiante </a>
 
+    <script src="/js/students/students.scripts.js"></script>
+  </body>
 </html>
