--- a/SSR/views/worker.views/listWorker.worker.ejs
+++ b/SSR/views/worker.views/listWorker.worker.ejs
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-   <h1>Listado de workers Workers</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <h1>Listado de trabajadores</h1>
+    <ul>
+      <%# for (let student of students) { %>
+      <!-- <li>
+        Nombre : <%# student.username %>
+        <button class="delete-button" data-id="<%# student.id %>">
+          Eliminar
+        </button>
+        <a href="/api/view/edit/<%# student.id %>">
+          <button class="edit-button">Editar</button>
+        </a>
+      </li> -->
+      <%# } %>
+    </ul>
+
+    <!-- <a href="/api/view/create"> Crear Estudiante </a> -->
+
+    <!-- <script src="/js/students/students.scripts.js"></script> -->
+  </body>
 </html>
