crud student new fixes

--- a/SSR/views/admins.views/home.admin.ejs
+++ b/SSR/views/admins.views/home.admin.ejs
@@ -10,7 +10,7 @@
 
    <% include('../admins.views/crudAdmin/listAdmins.ejs') %>
 
-   <% include('../student.views/test.student.ejs') %>
+   <% include('../student.views/allData.student.ejs') %>
 
    <% include('../worker.views/listWorker.worker.ejs') %>
 
