--- a/SSR/views/student.views/data-student.ejs
+++ b/SSR/views/student.views/data-student.ejs
@@ -8,8 +8,8 @@
 </head>
 
 <body>
- 
-    <h2>Nombre hola></h2>
+
+    <h2>Nombre:</h2><%= student.username  %>
 
   <script src="/js/students/students.scripts.js"></script>
 </body>
