--- a/SSR/views/student.views/list-student.ejs
+++ b/SSR/views/student.views/list-student.ejs
@@ -11,7 +11,7 @@
   <% for (let student of students) { %>
     <h2>Nombre : <%= student.username %></h2>
     <button class="delete-button" data-id="<%= student.id %>">Eliminar</button>
-    <a href="/api/view/edit/<%= student.id %>">
+    <a href="/api/view/student/edit/<%= student.id %>">
       <button class="edit-button">Editar</button>
     </a>
   <% } %>
