crud products almost completed

--- a/SSR/views/student.views/update-student.ejs
+++ b/SSR/views/student.views/update-student.ejs
@@ -14,6 +14,6 @@
     <input name="phone" type="text" value="784546486">
     <button type="submit">Actualizar</button>
   </form>
-  <script src="/js/students/students.scripts.js"></script>
+  <script src="/js/students/students-scripts.js"></script>
 </body>
 </html>
