--- a/SSR/views/product/create-product.ejs
+++ b/SSR/views/product/create-product.ejs
@@ -6,12 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  <H2>CREAME</H2>
-  <form action="/api/view/student/" method="POST">
-    <input name="username" type="text">
-    <input name="password" type="text">
+    <form action="/api/products/" method="POST">
+    <input name="name" type="text">
+    <input name="price" type="number">
+    <input name="category" type="text">
+    <input name="description" type="text">
     <button id="create-button" type="submit">Mandar</button>
   </form>
-  <script src="../../public/js/product/product-update.js"></script>
 </body>
 </html>
