--- a/SSR/views/product/list-product.ejs
+++ b/SSR/views/product/list-product.ejs
@@ -11,7 +11,7 @@
       <% for (let product of products) { %>
     <h2>Nombre : <%= product.name %> <span> id: <%= product.id %></span></h2>
     <button class="delete-button" data-id="<%= product.id %>">Eliminar</button>
-    <a href="/api/view/product/edit/<%= product.id %>">
+    <a href="/api/view/products/edit/<%= product.id %>">
       <button class="edit-button">Editar</button>
     </a>
   <% } %>
