--- a/SSR/views/worker.views/crudWorker/createWorker.ejs
+++ b/SSR/views/worker.views/crudWorker/createWorker.ejs
@@ -6,7 +6,8 @@
     <title>Create worker</title>
 </head>
 <body>
-    <form id="form-create">
+    <h1> Create worker </h1>
+    <form action="/api/worker/" method="POST" enctype="multipart/form-data" >
         <label for="username">Nombre:</label>
         <input type="text" id="username" name="username" required>
         
