--- a/SSR/views/worker.views/crudWorker/editWorker.ejs
+++ b/SSR/views/worker.views/crudWorker/editWorker.ejs
@@ -6,15 +6,16 @@
     <title>Edit worker</title>
   </head>
   <body>
-    <form id="form-edit">
+    <h1> Update worker <%= worker.id %> </h1>
+    <form id="worker-form-edit" data-id="<%= worker.id %>" >
       <label for="username">Nombre:</label>
-      <input type="text" id="username" name="username" required />
+      <input type="text" id="username" value="<%= worker.username %>" name="username" />
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" />
 
       <label for="phone">Telefono:</label>
-      <input type="phone" id="phone" name="phone" required />
+      <input type="phone" value="<%= worker.phone %>" id="phone" name="phone" />
 
       <label for="file">Foto de perfil:</label>
       <input type="file" id="file" name="file" />
