--- a/SSR/views/worker.views/crudWorker/listWorker.ejs
+++ b/SSR/views/worker.views/crudWorker/listWorker.ejs
@@ -6,20 +6,24 @@
     <title>Admins</title>
   </head>
   <body>
-    <h1>Listado de workers</h1>
+    <h1>Listado de Trabajadores</h1>
     <ul>
       <% for (let worker of workers) { %>
       <li>
         <%= worker.username %>
-        <button class="delete-button" data-id="<%= worker.id %>">
+        <button
+          onclick="deleteWorker('<%= worker.id %>')"
+          class="btn-delete"
+        >
           Eliminar
         </button>
-        <a href="/api/admin/edit/<%= worker.id %>">
+        <a href="/worker/edit/<%= worker.id %>">
           <button class="edit-button">Editar</button>
         </a>
         <% } %>
       </li>
     </ul>
-    <a href="/api/worker/create"> Crear Admin </a>
+    <a href="/worker/create"> Crear Trabajador </a>
+    <script src="/js/workers/forms.js"></script>
   </body>
 </html>
