--- a/SSR/views/product/list-product.ejs
+++ b/SSR/views/product/list-product.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h2>Listado</h2>
+  <h2>Listado de productos</h2>
 
   <% for (let product of products) { %>
   <h2>Nombre : <%= product.name %> <span> id: <%= product.id %></span></h2>
