--- a/SSR/views/worker.views/crudWorker/createWorker.ejs
+++ b/SSR/views/worker.views/crudWorker/createWorker.ejs
@@ -22,9 +22,7 @@
         
         <button type="submit">Crear</button>
       </form>
-      <a href="/api/admin">Volver</a>
-
-      <script src="/js/workers/forms.js"></script>
+      <a href="/admin">Volver</a>
 
 </body>
 </html>
