--- a/SSR/views/worker.views/crudWorker/editWorker.ejs
+++ b/SSR/views/worker.views/crudWorker/editWorker.ejs
@@ -22,7 +22,7 @@
 
       <button type="submit">Actualizar</button>
     </form>
-    <a href="/api/admin">Volver</a>
+    <a href="/admin">Volver</a>
 
     <script src="/js/workers/forms.js"></script>
   </body>
