--- a/SSR/views/admins.views/crudAdmin/createAdmin.ejs
+++ b/SSR/views/admins.views/crudAdmin/createAdmin.ejs
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <form action="/api/admin" method="POST">
-        <label for="username">Nombre:</label>
-        <input type="text" id="username" name="username" required>
-        
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        
-        <button type="submit">Guardar</button>
-      </form>
-      <a href="/api/admin">Volver</a>
-</body>
+  </head>
+  <body>
+    <h1>Create admin</h1>
+    <form action="/api/admin/" method="POST" enctype="multipart/form-data">
+      <label for="username">Nombre:</label>
+      <input type="text" id="username" name="username" required />
+
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required />
+
+      <label for="file">Foto de perfil:</label>
+      <input type="file" id="file" name="file" />
+
+      <button type="submit">Crear</button>
+    </form>
+    <a href="/admin">Volver</a>
+  </body>
 </html>
