--- a/SSR/views/admins.views/crudAdmin/editAdmin.ejs
+++ b/SSR/views/admins.views/crudAdmin/editAdmin.ejs
@@ -11,10 +11,10 @@
         <label for="username">Nombre</label>
         <input type="text" id="username" name="username" value="<%= admin.username %>" required>
         <label for="password">Contraseña</label>
-        <input type="password" id="password" name="password" value="<%= admin.password %>" required>
+        <input type="password" id="password" name="password" required>
         <button type="submit">Guardar cambios</button>
     </form>
-    <a href="/api/admin">Volver</a>
+    <a href="/admin">Volver</a>
     <script src="/js/admins/crudAdminJs/editAdmin.js" defer></script>
 </body>
 </html>
