--- a/SSR/views/admins.views/home.admin.ejs
+++ b/SSR/views/admins.views/home.admin.ejs
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-   <h1>Bienvenido! </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/dashboard.css" />
+  </head>
+  <body>
+    <h1>Bienvenido!</h1>
 
-   <hr>
+    <hr />
 
-   <%- include('./crudAdmin/listAdmins.ejs') %>
+    <div id="container-lists-admin">
+      <div class="container-list-dashboard">
+        <%- include('./crudAdmin/listAdmins.ejs') %>
+      </div>
+      <div class="container-list-dashboard">
+        <%- include('../student/list-student.ejs') %>
+      </div>
+      <div class="container-list-dashboard">
+        <%- include('../worker.views/crudWorker/listWorker.ejs') %>
+      </div>
+    </div>
 
-   <%- include('../student.views/test.student.ejs') %>
+    <hr />
 
-   <%- include('../worker.views/crudWorker/listWorker.ejs') %>
-
-   <hr>
-
-   <form action="/api/logout" method="POST">
-    <button type="submit">Logout</button>
-  </form>
-</body>
+    <form action="/logout" method="POST">
+      <button type="submit">Logout</button>
+    </form>
+  </body>
 </html>
