--- a/SSR/views/error.ejs
+++ b/SSR/views/error.ejs
@@ -8,6 +8,6 @@
 <body>
   <h1>Error</h1>
   <p><%= message %></p>
-  <a href="/api/login"> Continue --> </a>
+  <a href="/login"> Continue --> </a>
 </body>
 </html>
