--- a/SSR/views/login.ejs
+++ b/SSR/views/login.ejs
@@ -8,7 +8,7 @@
   <body>
     <h2>Login</h2>
 
-    <form action="/api/signin" method="POST">
+    <form action="/signin" method="POST">
       <label for="username"> Username </label>
       <input type="text" name="username" id="username" />
       <br />
