--- a/SSR/views/student/create-student.ejs
+++ b/SSR/views/student/create-student.ejs
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create student</title>
 </head>
 <body>
-  <H2>CREAME</H2>
-  <form action="/api/view/student/" method="POST">
-    <input name="username" type="text">
-    <input name="password" type="text">
-    <button id="create-button" type="submit">Mandar</button>
-  </form>
+    <h1> Create student </h1>
+    <form action="/api/student/" method="POST" enctype="multipart/form-data" >
+        <label for="username">Nombre:</label>
+        <input type="text" id="username" name="username" required>
+        
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="age">Edad:</label>
+        <input type="number" id="age" name="age" required>
+
+        <label for="phone">Telefono:</label>
+        <input type="number" id="phone" name="phone" required>
+
+        <label for="file">Foto de perfil:</label>
+        <input type="file" id="file" name="file" >
+        
+        <button type="submit">Crear</button>
+      </form>
+      <a href="/admin">Volver</a>
 </body>
 </html>
