--- a/SSR/views/student/list-student.ejs
+++ b/SSR/views/student/list-student.ejs
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Listado de estudiantes</h1>
+    <h2>Listado de estudiantes</h2>
     <ul>
       <% for (let student of students) { %>
       <li>
@@ -15,24 +15,15 @@
         <button class="delete-button" data-id="<%= student.id %>">
           Eliminar
         </button>
-        <a href="/api/view/edit/<%= student.id %>">
+        <a href="/student/edit/<%= student.id %>">
           <button class="edit-button">Editar</button>
         </a>
       </li>
       <% } %>
     </ul>
 
-<body>
-  <% for (let student of students) { %>
-    <h2>Nombre : <%= student.username %></h2>
-    <button class="delete-button" data-id="<%= student.id %>">Eliminar</button>
-    <a href="/api/view/student/edit/<%= student.id %>">
-      <button class="edit-button">Editar</button>
-    </a>
-  <% } %>
-  <script src="/js/students/students.scripts.js"></script>
-</body>
+    <a href="/student/create"> Crear Estudiante </a>
 
-    <script src="/js/students/students.scripts.js"></script>
+    <script src="/js/students/students-scripts.js"></script>
   </body>
 </html>
