--- a/API_RESTFULL/frontend/src/components/setttingsComp/Setting.scss
+++ b/API_RESTFULL/frontend/src/components/setttingsComp/Setting.scss
@@ -10,27 +10,52 @@ div.settings-card {
   width: 100%;
   height: 50px;
 
-  .content-setting{
+  .content-setting {
     display: flex;
     gap: 30px;
     justify-content: left;
     align-items: center;
     font-size: $font-size-medium;
 
-    .menu-item-icon svg{
+    .menu-item-icon svg {
       width: 100%;
       height: 100%;
       color: var(--text-2);
       font-size: $font-size-big;
     }
   }
-  .arrow-right-icon{
-    color: var(--text-1);
+
+  .arrow-right-icon {
+    color: var(--text-2);
   }
 
+
   @media (min-width: 800px) {
-    span{
+    span {
       font-size: $font-t-subtitle-1;
     }
+  }
+}
+
+div.settings-card:hover {
+  .arrow-right-icon {
+    color: var(--text-1);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: scale(1);
+    transform: scale(1.3);
+  }
+
+  .menu-item-icon svg {
+    color: var(--text-1);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: scale(1);
+    transform: scale(1.1);
+  }
+
+  .menu-item-text {
+    color: var(--text-1);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: scale(1);
+    transform: scale(1.1);
   }
 }
