--- a/API_RESTFULL/frontend/src/components/productCard/ProductCard.scss
+++ b/API_RESTFULL/frontend/src/components/productCard/ProductCard.scss
@@ -11,7 +11,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: transform 0.5s ease-in-out;
+  transform-origin: center;
   // justify-content: space-between;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 
   .container-img-product-card{
     width: 100%;
