--- a/API_RESTFULL/frontend/src/pages/ProductsList/ProductsList.scss
+++ b/API_RESTFULL/frontend/src/pages/ProductsList/ProductsList.scss
@@ -44,8 +44,9 @@
             margin: 20px 0;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            row-gap: 20px;
-            column-gap: 10px;
+            // row-gap: 20px;
+            // column-gap: 10px;
+            gap: 23px
 
         }
     }
