--- a/API_RESTFULL/frontend/src/pages/orders/Orders.scss
+++ b/API_RESTFULL/frontend/src/pages/orders/Orders.scss
@@ -2,9 +2,14 @@
 
 #Orders-page {
   background-color: var(--background-1);
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  // gap: 20px;
+  padding-bottom: 100px;
 
   #orders-container{
     display: flex;
@@ -14,6 +19,7 @@
     width: 100%;
     height: 100%;
     gap: 20px;
+    // padding: 60px 0;
 
     .cup-img-logo{
       position: absolute;
