--- a/API_RESTFULL/frontend/src/components/productCard/ProductCard.scss
+++ b/API_RESTFULL/frontend/src/components/productCard/ProductCard.scss
@@ -26,7 +26,7 @@
   }
   .content-product-card{
     width: 100%;
-    height: 100%;
+    max-height: 10%;
     margin: 0 5px;
     @include flex-items;
 
